--- a/site/teaching.Rmd
+++ b/site/teaching.Rmd
@@ -2,4 +2,41 @@
 title: "Teaching and Engagement"
 ---
 
-Under construction....
+
+####Instructor at Iowa State University
+
+**FOR/NREM 452/552: Ecosystem Management**  
+Department of Natural Resource Ecology and Management, Spring 2015
+Principles of planning, regulating, and decision-making associated with public and private lands, with consideration of forest, grassland, wetland, and freshwater aquatic ecosystems. Integrated natural resources management within ecological, social, economic and policy constraints.
+
+####Guest lecturer at Iowa State University
+
+**CRP 383: Theory of the Planning Process**  
+Department of Community and Regional Planning, Fall 2016  
+
+**HORT 376: Field Production of Horticultural Crops**  
+Department of Horticulture, Fall 2016   
+
+**FOR 451: Forest Resource Economics**  
+Department of Natural Resource Ecology and Management, Spring 2014   
+
+**NREM 570: Advanced Decision-Making in Natural Resource Allocation**   
+Department of Natural Resource Ecology and Management, Spring 2014  
+
+####Educational outreach and engagement
+
+**Donation Gardening Trainings**  
+ISU Extension Master Gardener Program, Summer 2016  
+
+**Food Security in Iowa Immersion Session Leader**  
+World Food Prize Iowa Youth Institute, Spring 2016  
+
+**People in Ecosystems/Watershed Integration Public Workshops**  
+Co-hosted by Prairie Rivers of Iowa at Des Moines Area Community College, Fall 2015  
+
+**People in Ecosystems/Watershed Integration Class**  
+Des Moines Brody Middle School 7th Grade Science, Spring 2015  
+
+
+
+
