weird image behavior

--- a/site/research.Rmd
+++ b/site/research.Rmd
@@ -2,9 +2,9 @@
 title: "Research"
 ---
 
-<img src="../demogarden-009.JPG" alt="some text" style="float:right" hspace="20" vspace="10"
-height="49%" width="49%"><img src="../rockrapids-harvest.JPG" alt="some text" style="float:right" hspace="20" vspace="10"
-height="49%" width="49%"><img src="../IALEpresentation_pewiscreenshot.PNG" alt="some text" style="float:right" hspace="20" vspace="10"
+<img src="demogarden-009.JPG" alt="some text" style="float:right" hspace="20" vspace="10"
+height="49%" width="49%"><img src="rockrapids-harvest.JPG" alt="some text" style="float:right" hspace="20" vspace="10"
+height="49%" width="49%"><img src="IALEpresentation_pewiscreenshot.PNG" alt="some text" style="float:right" hspace="20" vspace="10"
 height="49%" width="49%">
 
 ####Graduate Research Assistant, ISU Extension & Outreach
