--- a/site/index.Rmd
+++ b/site/index.Rmd
@@ -2,7 +2,7 @@
 title: "About me"
 ---
 
-<img src="../carrie-0115-2.JPG" alt="some text" style="float:right" hspace="20"
+<img src="carrie-0115-2.JPG" alt="some text" style="float:right" hspace="20"
 width="170" height="170">I am a PhD candidate in Sustainable Agriculture and minoring in Women's and Gender Studies at Iowa State University, working with Kathleen Hunt and Ann Oberhauser.  My research assistantships are with ISU Extension & Outreach Local Foods Team and the SNAP-Education program, in collaboration with the ISU Extension Master Gardener program.
 
 Prior to entering my PhD program, I completed my M.S. in Sustainable Agriculture at Iowa State University in 2014, and my B.A. in The Plan II Honors Program and B.B.A. in Accounting at the University of Texas at Austin in 2008. 
