--- a/site/research.Rmd
+++ b/site/research.Rmd
@@ -3,8 +3,8 @@ title: "Research"
 ---
 
 <img src="demogarden-009.JPG" alt="some text" style="float:right" hspace="20" vspace="10"
-height="49%" width="49%"><img src="rockrapids-harvest.JPG" alt="some text" style="float:right" hspace="20" vspace="10"
-height="49%" width="49%"><img src="IALEpresentation_pewiscreenshot.PNG" alt="some text" style="float:right" hspace="20" vspace="10"
+height="49%" width="49%"><img src="rockrapids-harvest.jpg" alt="some text" style="float:right" hspace="20" vspace="10"
+height="49%" width="49%"><img src="IALEpresentation_pewiscreenshot.png" alt="some text" style="float:right" hspace="20" vspace="10"
 height="49%" width="49%">
 
 ####Graduate Research Assistant, ISU Extension & Outreach
