Updated teaching and engagement

--- a/site/teaching.Rmd
+++ b/site/teaching.Rmd
@@ -11,6 +11,9 @@ Principles of planning, regulating, and decision-making associated with public a
 
 ####Guest lecturer at Iowa State University
 
+**WS 402/502: Feminist Methodologies**
+Women's and Gender Studies Program, Spring 2017
+
 **CRP 383: Theory of the Planning Process**  
 Department of Community and Regional Planning, Fall 2016  
 
@@ -24,6 +27,9 @@ Department of Natural Resource Ecology and Management, Spring 2014
 Department of Natural Resource Ecology and Management, Spring 2014  
 
 ####Educational outreach and engagement
+
+**Dare to Share Your Garden**  
+ISU Extension & Outreach Cass County Spring Garden Seminar, Spring 2017
 
 **Donation Gardening Trainings**  
 ISU Extension Master Gardener Program, Summer 2016  
