--- a/site/teaching.Rmd
+++ b/site/teaching.Rmd
@@ -11,7 +11,7 @@ Principles of planning, regulating, and decision-making associated with public a
 
 ####Guest lecturer at Iowa State University
 
-**WS 402/502: Feminist Methodologies**
+**WS 402/502: Advanced Seminar in Feminist Research Methods**  
 Women's and Gender Studies Program, Spring 2017
 
 **CRP 383: Theory of the Planning Process**  
