--- a/site/teaching.Rmd
+++ b/site/teaching.Rmd
@@ -2,16 +2,36 @@
 title: "Teaching and Engagement"
 ---
 
+#### Instructor at Colorado State University
 
-####Instructor at Iowa State University
+**ECOL/GDPE 592: Sustainable Food Systems**  
+Graduate Degree Program in Ecology, Spring 2021. Interdisciplinary complexities of food systems, including material flows and sociopolitical contexts of food that are changing in response to global and local challenges. Analysis of strategies for improving the sustainability and resilience of food systems. Primary disciplinary foci include ecology, agronomy, and social sciences.
+
+#### Instructor at Iowa State University
+
+**WGS 201 Introduction to Women's and Gender Studies**  
+Women's and Gender Studies Program, Spring 2019 (2 sections). Contemporary status of women in the U.S. and worldwide from social, economic, historical, political, philosophical and literary perspectives. Analysis of intersection of gender, race, class, and sexuality. Subject matter includes work, health, sexuality, and violence.
 
 **FOR/NREM 452/552: Ecosystem Management**  
-Department of Natural Resource Ecology and Management, Spring 2015
-Principles of planning, regulating, and decision-making associated with public and private lands, with consideration of forest, grassland, wetland, and freshwater aquatic ecosystems. Integrated natural resources management within ecological, social, economic and policy constraints.
+Department of Natural Resource Ecology and Management, Spring 2015. Principles of planning, regulating, and decision-making associated with public and private lands, with consideration of forest, grassland, wetland, and freshwater aquatic ecosystems. Integrated natural resources management within ecological, social, economic and policy constraints.
 
-####Guest lecturer at Iowa State University
+#### Guest lecturer at Colorado State University
 
-**WS 402/502: Advanced Seminar in Feminist Research Methods**  
+**SOC 315: Applications of Qualitative Research**  
+CSU Department of Sociology, Fall 2020
+
+**ESS 312: Sustainability Science**  
+CSU Department of Ecology Science & Sustainability, Spring 2020
+
+#### Guest lecturer at Iowa State University
+
+**WGS 402/502: Advanced Seminar in Feminist Research Methods**  
+Women's and Gender Studies Program, Spring 2021
+
+**SOC 513: Qualitative Research Methods**  
+Department of Sociology, Spring 2018
+
+**WGS 402/502: Advanced Seminar in Feminist Research Methods**  
 Women's and Gender Studies Program, Spring 2017
 
 **CRP 383: Theory of the Planning Process**  
@@ -26,7 +46,7 @@ Department of Natural Resource Ecology and Management, Spring 2014
 **NREM 570: Advanced Decision-Making in Natural Resource Allocation**   
 Department of Natural Resource Ecology and Management, Spring 2014  
 
-####Educational outreach and engagement
+#### Educational outreach and engagement
 
 **Dare to Share Your Garden**  
 ISU Extension & Outreach Cass County Spring Garden Seminar, Spring 2017
