--- a/site/index.Rmd
+++ b/site/index.Rmd
@@ -3,12 +3,16 @@ title: "About me"
 ---
 
 <img src="carrie-0115-2.JPG" alt="some text" style="float:right" hspace="20"
-width="170" height="170">I am a PhD candidate in Sustainable Agriculture and minoring in Women's and Gender Studies at Iowa State University, working with Kathleen Hunt and Ann Oberhauser.  My research assistantships are with ISU Extension & Outreach Local Foods program and ISU Extension & Outreach SNAP-Education program, in collaboration with the Master Gardener program.
+width="170" height="170">I am an interdisciplinary social scientist and activist-scholar. My research engages feminist and Black geographies and political ecology to understand how racism structures US food, agricultural, and environmental systems, and how communities are working toward possibilties for transformation.
 
-Prior to entering my PhD program, I completed my M.S. in Sustainable Agriculture at Iowa State University in 2014, and my B.A. in The Plan II Honors Program and B.B.A. in Accounting at the University of Texas at Austin in 2008. 
+In Fall 2019, I started my current position as a Postdoctoral Fellow at Colorado State University, advised by [Melissa McHale](https://warnercnr.colostate.edu/person/?user=SNCpwcbhBCUCqJgJ804jOA%3D%3D) in the Department of Ecosystem Science & Sustainability and [Joshua Sbicca](https://www.libarts.colostate.edu/people/jsbicca/) in the Department of Sociology. My current research projects focus on urban political ecology and carceral food justice. I am also a [Sustainability Leadership Fellow](https://sustainability.colostate.edu/education-and-training/sustainability-leadership-fellows/) with the CSU School of Global Environmental Sustainability.
 
-I'm interested in food, social, and environmental justice, with a focus on feminist community-based, participatory research. While in Ames, Iowa for graduate school, I've been involved with the Food at First garden and meal service, Wheatsfield Cooperative Grocery, and the Journal of Critical Thought and Praxis.  Currently I live in Durham, North Carolina, and enjoy swimming, cycling, hiking, rock climbing, and generally being outdoors whenever I can.
+Prior to CSU, I completed PhD studies and was a Brown Graduate Fellow at Iowa State University, majoring in the interdisciplinary Graduate Program in Sustainable Agriculture and minoring in Women's and Gender Studies. I worked with feminist geographer [Ann Oberhauser](https://soc.iastate.edu/ann-oberhauser/) and held doctoral research assistantships with ISU Extension & Outreach [Local Foods](https://www.extension.iastate.edu/ffed/) and SNAP-Education programs. My dissertation project, entitled "A feminist political ecology of food justice in Iowa," critically examined a university-community food systems partnership called Growing Together Iowa. During my time in graduate school, I was involved with the Food at First garden and meal service, Wheatsfield Cooperative Grocery, the Journal of Critical Thought and Praxis, and the Friends of the Leopold Center for Sustainable Agriculture.
 
-[CV](CV_Carrie_Chennault_September_2017.pdf) | carriemcpotato@iastatesquash.edu remove the vegetables
+Prior to entering my PhD program, I completed an MS in 2014 in the ISU Department of Natural Resource Ecology and Management, majoring in Sustainable Agriculture. During that time, I was a graduate research assisant and member of the Landscape Ecology & Sustainable Ecosystem Management lab and the People, Land Use, and Society lab at ISU. In 2008, I earned a BA in The Plan II Honors Program and BBA in Accounting at the University of Texas at Austin.
+
+Currently I live with my spouse Andee in Fort Collins, Colorado and enjoy swimming, cycling, hiking, rock climbing, and being outdoors.
+
+[CV](CV_Carrie_Chennault_Feb2021.pdf) | [Carrie.Chennault@colostate.edu](mailto:Carrie.Chennault@colostate.edu)
 
 
