--- a/site/index.Rmd
+++ b/site/index.Rmd
@@ -3,7 +3,7 @@ title: "About me"
 ---
 
 <img src="carrie-0115-2.JPG" alt="some text" style="float:right" hspace="20"
-width="170" height="170">I am an interdisciplinary social scientist and activist-scholar. My research engages feminist and Black geographies and political ecology to understand how racism structures US food, agricultural, and environmental systems, and how communities are working toward possibilties for transformation.
+width="170">I am an interdisciplinary social scientist and activist-scholar. My research engages feminist and Black geographies and political ecology to understand how racism structures US food, agricultural, and environmental systems, and how communities are working toward possibilties for transformation.
 
 In Fall 2019, I started my current position as a Postdoctoral Fellow at Colorado State University, advised by [Melissa McHale](https://warnercnr.colostate.edu/person/?user=SNCpwcbhBCUCqJgJ804jOA%3D%3D) in the Department of Ecosystem Science & Sustainability and [Joshua Sbicca](https://www.libarts.colostate.edu/people/jsbicca/) in the Department of Sociology. My current research projects focus on urban political ecology and carceral food justice. I am also a [Sustainability Leadership Fellow](https://sustainability.colostate.edu/education-and-training/sustainability-leadership-fellows/) with the CSU School of Global Environmental Sustainability.
 
