Updated CV fall 2021

--- a/site/research.Rmd
+++ b/site/research.Rmd
@@ -21,12 +21,9 @@ What are the politics of developing just and anti-racist food, agricultural, and
 - Environmental justice and equity
 - Public science, community engagement and scholar-activism
 
-#### Postdoctoral Fellow, Colorado State University  
+#### Assistant Professor of Geography, Colorado State University  
 *Prison Agriculture Lab*   
-As a postdoctoral researcher, I am a member of the Prison Agricultural Lab, led by Dr. Joshua Sbicca in the Department of Sociology. Our lab is conducting a first-of-its-kind nationwide study on food and agricultural activities within US prisons. Our initial effort has been two-fold: 1. compiling and analyzing a nationwide dataset of food and agricultural activities at prisons, and 2. contextualizing the development and expansion of agricultural activities since Reconstruction through the lens of racial capitalism. In framing this research as abolition praxis, not only are we interested in understanding how present-day practices of prison agriculture are implicated in the racial capitalist project of prison expansion, we are also looking for ways in which prison agriculture counteracts and contests carcerality---and might work toward the elimination of prisons. Beyond our core research activities, the Prison Agriculture lab has collaborated with the [CSU Geospatial Centroid](https://gis.colostate.edu/) to map prison agriculture, census, and related socio-spatial data.
-
-*Urban Ecology Lab*    
-The Urban Ecology Lab, led by Dr. Melissa McHale in the Department of Ecosystem Science and Sustainability, focuses on the development of urban sustainability and environmental justice with research in areas including urban forests and urban tree cover, biomass usage, home energy usage, and the role of municipal planning and programs. In my current research with the lab, I am examining the urban political ecologies of residential tree cover in Raleigh, North Carolina.
+I am co-director of the CSU Prison Agricultural Lab, along with Dr. Joshua Sbicca from the CSU Department of Sociology. Our lab is conducting a first-of-its-kind nationwide study on food and agricultural activities within US prisons. Our initial effort has been two-fold: 1. compiling and analyzing a nationwide dataset of food and agricultural activities at prisons, and 2. contextualizing the development and expansion of agricultural activities since Reconstruction through the lens of racial capitalism. In framing this research as abolition praxis, not only are we interested in understanding how present-day practices of prison agriculture are implicated in the racial capitalist project of prison expansion, we are also looking for ways in which prison agriculture counteracts and contests carcerality---and might work toward the elimination of prisons. Beyond our core research activities, the Prison Agriculture lab has collaborated with the [CSU Geospatial Centroid](https://gis.colostate.edu/) to map prison agriculture, census, and related socio-spatial data.
 
 <img src="demogarden-009.JPG" alt="some text" style="float:right" hspace="20" vspace="10"
 height="46%" width="46%"><img src="rockrapids-harvest.jpg" alt="some text" style="float:right" hspace="20" vspace="10"
@@ -40,6 +37,8 @@ height="46%" width="46%">
 My dissertation research was part of an interdisciplinary effort within ISU Extension & Outreach (ISUEO) to coordinate statewide community donation gardens, entitled *Growing Together Iowa*. In this USDA Supplemental Nutrition Assistance Program Education-funded project, ISUEO collaborates with university research farms, county extension Master Gardeners, food pantries, and other grassroots partners. The project supports Master Gardeners in forging a donation gardening network to increase fresh produce in local food pantries. As a feminist scholar committed to praxis, I interacted with, worked alongside, and learned from the people working in the gardens and pantries, and the people accessing the food. Collaborating with Iowans across the state, I worked to foster community efforts for local, sustainable foods and to develop strong, caring, and socially just communities.
 
 The Local Foods program supported my dissertation research on community food systems in Iowa. I coordinated my research activities in the Growing Together project with the Local Foods Team through participating in our community development program and serving on our equity and inclusion committee.
+
+Through dissertation fieldwork, I began engaging in community co-authorship with food and environmental justice activists and organizers in Dubuque, Iowa. Our co-authorship is ongoing, focusing on anti-racist activism, municipal governments, and the intersections of urban food, housing, and land in Dubuque.
 
 **Department of Natural Resource Ecology & Management**  
 *Landscape Ecology & Sustainable Ecosystem Management Lab*  
