--- a/site/teaching.Rmd
+++ b/site/teaching.Rmd
@@ -4,6 +4,9 @@ title: "Teaching and Engagement"
 
 #### Instructor at Colorado State University
 
+**GR 100: Introduction to Geography**
+Department of Anthropology & Geography, Fall 2021.
+
 **ECOL/GDPE 592: Sustainable Food Systems**  
 Graduate Degree Program in Ecology, Spring 2021. Interdisciplinary complexities of food systems, including material flows and sociopolitical contexts of food that are changing in response to global and local challenges. Analysis of strategies for improving the sustainability and resilience of food systems. Primary disciplinary foci include ecology, agronomy, and social sciences.
 
