--- a/site/index.Rmd
+++ b/site/index.Rmd
@@ -5,7 +5,7 @@ title: "About me"
 <img src="carrie-0115-2.JPG" alt="some text" style="float:right" hspace="20"
 width="170">I am an interdisciplinary social scientist and activist-scholar. My research engages feminist and Black geographies and political ecology to understand how racism structures US food, agricultural, and environmental systems, and how communities are working toward possibilties for transformation.
 
-In Fall 2019, I started my current position as a Postdoctoral Fellow at Colorado State University, advised by [Melissa McHale](https://warnercnr.colostate.edu/person/?user=SNCpwcbhBCUCqJgJ804jOA%3D%3D) in the Department of Ecosystem Science & Sustainability and [Joshua Sbicca](https://www.libarts.colostate.edu/people/jsbicca/) in the Department of Sociology. My current research projects focus on urban political ecology and carceral food justice. I am also a [Sustainability Leadership Fellow](https://sustainability.colostate.edu/education-and-training/sustainability-leadership-fellows/) with the CSU School of Global Environmental Sustainability.
+In Fall 2021, I started my current position as an Assistant Professor of Geography at Colorado State University. My current research projects focus on food and environmental justice and anti-racism in the United States, using mixed methods grounded in queer feminist and participatory methodologies.  From 2019-2021, I held a postdoctoral fellowship at CSU and was a [Sustainability Leadership Fellow](https://sustainability.colostate.edu/education-and-training/sustainability-leadership-fellows/) with the CSU School of Global Environmental Sustainability.
 
 Prior to CSU, I completed PhD studies and was a Brown Graduate Fellow at Iowa State University, majoring in the interdisciplinary Graduate Program in Sustainable Agriculture and minoring in Women's and Gender Studies. I worked with feminist geographer [Ann Oberhauser](https://soc.iastate.edu/ann-oberhauser/) and held doctoral research assistantships with ISU Extension & Outreach [Local Foods](https://www.extension.iastate.edu/ffed/) and SNAP-Education programs. My dissertation project, entitled "A feminist political ecology of food justice in Iowa," critically examined a university-community food systems partnership called Growing Together Iowa. During my time in graduate school, I was involved with the Food at First garden and meal service, Wheatsfield Cooperative Grocery, the Journal of Critical Thought and Praxis, and the Friends of the Leopold Center for Sustainable Agriculture.
 
@@ -13,6 +13,6 @@ Prior to entering my PhD program, I completed an MS in 2014 in the ISU Departmen
 
 Currently I live with my spouse Andee in Fort Collins, Colorado and enjoy swimming, cycling, hiking, rock climbing, and being outdoors.
 
-[CV](CV_CarrieChennault_Feb2021.pdf) | [Carrie.Chennault@colostate.edu](mailto:Carrie.Chennault@colostate.edu)
+[CV](CV_CarrieChennault_Oct2021.pdf) | [Carrie.Chennault@colostate.edu](mailto:Carrie.Chennault@colostate.edu)
 
 
