Updates to research and teaching

--- a/site/teaching.Rmd
+++ b/site/teaching.Rmd
@@ -2,15 +2,15 @@
 title: "Teaching and Engagement"
 ---
 
-#### Instructor at Colorado State University
+#### Courses taught at Colorado State University
 
 **GR 100: Introduction to Geography**
-Department of Anthropology & Geography, Fall 2021.
+Department of Anthropology & Geography, Fall 2021 (2 sections). Major geographic themes applied to selected regions; physical environment, human-land relationships, and regional analysis.
 
 **ECOL/GDPE 592: Sustainable Food Systems**  
 Graduate Degree Program in Ecology, Spring 2021. Interdisciplinary complexities of food systems, including material flows and sociopolitical contexts of food that are changing in response to global and local challenges. Analysis of strategies for improving the sustainability and resilience of food systems. Primary disciplinary foci include ecology, agronomy, and social sciences.
 
-#### Instructor at Iowa State University
+#### Courses taught at Iowa State University
 
 **WGS 201 Introduction to Women's and Gender Studies**  
 Women's and Gender Studies Program, Spring 2019 (2 sections). Contemporary status of women in the U.S. and worldwide from social, economic, historical, political, philosophical and literary perspectives. Analysis of intersection of gender, race, class, and sexuality. Subject matter includes work, health, sexuality, and violence.
