Update contents on website, including CV

--- a/site/research.Rmd
+++ b/site/research.Rmd
@@ -23,7 +23,7 @@ What are the politics of developing just and anti-racist food, agricultural, and
 
 #### Assistant Professor of Geography, Colorado State University  
 *Prison Agriculture Lab*   
-I am co-director of the CSU Prison Agricultural Lab, along with Dr. Joshua Sbicca, faculty in the CSU Department of Sociology. Our lab is conducting a first-of-its-kind nationwide study on food and agricultural activities within US prisons. Our efforts have been three-fold: 1. compiling and analyzing a nationwide dataset of food and agricultural activities at prisons,  2. contextualizing the development and expansion of agricultural activities since Reconstruction through the lens of racial capitalism, and 3. mapping prison agriculture to understand and show its embeddedness in carceral conditions that transcend and connect individual agricultural sites. In framing this research as abolition praxis, not only are we interested in understanding how present-day practices of prison agriculture are implicated in the racial capitalist project of prison expansion, we are also looking for ways in which prison agriculture counteracts and contests carcerality---and might work toward the elimination of prisons. Beyond our core research activities, the Prison Agriculture lab has collaborated with the [CSU Geospatial Centroid](https://gis.colostate.edu/) to map prison agriculture, census, and related socio-spatial data.
+I am co-director of the [Prison Agriculture Lab](https://prisonagriculture.com/), along with Dr. Joshua Sbicca, faculty in the CSU Department of Sociology. Our lab has produced a first-of-its-kind nationwide study on food and agricultural activities within US prisons. Our efforts have been three-fold: 1. compiling and analyzing a nationwide dataset of food and agricultural activities at prisons,  2. contextualizing the development and expansion of agricultural activities since Reconstruction through the lens of racial capitalism, and 3. mapping prison agriculture to understand and show its embeddedness in carceral conditions that transcend and connect individual agricultural sites. In framing this research as abolition praxis, not only are we interested in understanding how present-day practices of prison agriculture are implicated in the racial capitalist project of prison expansion, we are also looking for ways in which prison agriculture counteracts and contests carcerality---and might work toward the elimination of prisons. Beyond our core research activities, the Prison Agriculture Lab has collaborated with the [CSU Geospatial Centroid](https://gis.colostate.edu/) to map prison agriculture, census, environmental, and related socio-spatial data.
 
 <img src="demogarden-009.JPG" alt="some text" style="float:right" hspace="20" vspace="10"
 height="46%" width="46%"><img src="rockrapids-harvest.jpg" alt="some text" style="float:right" hspace="20" vspace="10"
